--- a/public/home.html
+++ b/public/home.html
@@ -8,17 +8,17 @@
 </head>
 <body style="background-color: #0d1117; color: white; margin: 0; padding-bottom: 70px;">
 
-    <div style="padding: 10px 15px; display: grid; grid-template-columns: 1fr auto 1fr; align-items: center; border-bottom: 1px solid #30363d; background: #0d1117;">
+    <div style="padding: 12px 15px; display: grid; grid-template-columns: 1fr auto 1fr; align-items: center; border-bottom: 1px solid #30363d; background: #0d1117;">
         
         <div style="display: flex; justify-content: flex-start;">
-            <button onclick="location.href='store.html'" style="background: none; border: none; cursor: pointer; color: white; padding: 0; display: flex; flex-direction: column; align-items: center;">
-                <span style="font-size: 18px;">🛒</span>
-                <span style="font-size: 10px; color: #8b949e; font-weight: bold; margin-top: 2px;">STORE</span>
+            <button onclick="location.href='store.html'" style="background: rgba(88, 166, 255, 0.1); border: 1px solid #58a6ff; cursor: pointer; color: white; padding: 6px 12px; border-radius: 8px; display: flex; flex-direction: column; align-items: center; transition: 0.3s; box-shadow: 0 0 10px rgba(88, 166, 255, 0.2);">
+                <span style="font-size: 16px;">🛒</span>
+                <span style="font-size: 9px; color: #58a6ff; font-weight: bold; margin-top: 2px; letter-spacing: 0.5px;">STORE</span>
             </button>
         </div>
 
         <div style="text-align: center;">
-            <h3 style="color: #58a6ff; margin: 0; font-size: 18px; letter-spacing: 1px;">ELITE NEXUS</h3>
+            <h3 style="color: #58a6ff; margin: 0; font-size: 18px; letter-spacing: 1px; font-weight: bold;">ELITE NEXUS</h3>
         </div>
 
         <div style="display: flex; justify-content: flex-end;">
